Rework Viewing Empty Data Objects test case